osp/static/css/base.css
@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
@import url("/static/css/color.css");

@font-face {
  font-family: 'IBMPlexSansKR-Regular';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: 'IBMPlexSansKR-Regular';
  font-weight: 500;
}

li,
a,
button {
  font-weight: 500;
  text-decoration: none;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  /*font-size: 62.5%;*/
}

body {
  background-color: var(--sub-bg-color);
  -ms-overflow-style: none;
}

body::-webkit-scrollbar {
  display: none;
}

.row {
  --bs-gutter-x: 0.8rem !important;
}

#body-wrapper {
  min-height: 100%;
  position: relative;
}

#body-content {
  padding-bottom: 80px;
}

#main-navbar {
  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
  color: #000000;
}

#main-navbar .navbar-brand {
  font-style: normal;
  font-weight: 800;
  font-size: 18px;
  margin-right: 0;
}

#main-navbar .nav-link {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
}

#main-navbar .dropdown-menu {
  border-radius: 0;
  width: fit-content;
  color: #000000;
}

#main-navbar .icon {
  vertical-align: middle;
}

div.vr {
  background-color: var(--main-border-color);
  opacity: 100;
}

.noti-dropdown {
  padding: 0;
}

.noti-item {
  width: 20em;
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-bottom: solid 0.5px var(--main-border-color);
}

.noti-item:last-child {
  border-bottom: none;
}

.noti-item.empty {
  vertical-align: middle;
}

.noti-item.read {
  background-color: var(--main-bg-color);
  color: var(--main-border-color);
}

#new-noti {
  background-color: var(--alert-color);
  border-radius: 50%;
  padding: 0.25rem;
  position: relative;
  top: -10px;
  /*top: -1rem;*/
  left: 8px;
  /*left: 0.5rem;*/
  height: 0.5rem;
  width: 0.5rem;
}

#new-msg {
  background-color: var(--alert-color);
  border-radius: 50%;
  padding: 0.25rem;
  position: relative;
  /*top: -1rem;*/
  top: -12px;
  /*left: 0.5rem;*/
  left: 8px;
}

#message-modal .modal-dialog,
#message-modal .modal-content {
  height: 70%;
  min-width: 700px;
}

#message-modal .modal-body {
  height: 1%;
}

div> ::-webkit-scrollbar {
  width: 0.25rem;
  height: 0.25rem;
}

div> ::-webkit-scrollbar-track {
  border-radius: 0.625rem;
}

div> ::-webkit-scrollbar-thumb {
  background: var(--profile-btn-inactive);
  border-radius: 0.625rem;
}

div> ::-webkit-scrollbar-thumb:hover {
  background: var(--profile-btn-inactive);
}

#message-modal-body {
  padding: 0;
}

#opponent-list {
  padding-inline-start: 0;
  list-style-type: none;
  height: 100%;
  overflow: scroll;
}

.opponent-item {
  padding: 1rem;
}

.opponent-item.selected {
  background-color: var(--main-bg-color);
}

.modal-header {
  border-color: var(--main-border-color);
  border-top-left-radius: 0.625rem;
  border-top-right-radius: 0.625rem;
  border: none;
  color: #000000;
}

.modal-header button {
  background-color: transparent;
  border: 0;
  color: #FFFFFF;
}

.modal-header button span {
  vertical-align: middle;
  display: inline-block;
}

.modal-content {
  border-radius: 0.625rem;
  border: none;
}

.modal-body .form-control {
  box-shadow: inset 0rem 0.125rem 0.25rem rgba(0, 0, 0, 0.25);
}
.email-input {
  flex: 2 1 60%;
}
.email-input.email-select{
  flex: 0 1 40%;
}
.ss-multi-selected {
  border: none !important;
  box-shadow: inset 0rem 0.125rem 0.25rem rgba(0, 0, 0, 0.25);
}

#message-modal .modal-header {
  border-bottom: 1px solid var(--main-border-color);
}

#oppo-list {
  width: 40%;
  z-index: 1;
  border-bottom-left-radius: 0.625rem;
  box-shadow: 1px 0px 4px rgba(0, 0, 0, 0.25);
}

#chat-view-tab {
  width: 60%;
  padding: 1rem;
  border-bottom-right-radius: 0.625rem;
  background-color: var(--main-bg-color);
  display: flex;
  flex-direction: column;
}

img.opponent-profile {
  height: 2rem;
  width: 2rem;
  border-radius: 50%;
  border: solid 0.5px var(--main-border-color);
}

.unread-count {
  border-radius: 1em;
  padding: .25em;
  color: #FFFFFF;
  background-color: var(--sub-point-color);
  font-weight: 800;
  font-size: 12px;
}

.opponent-name {
  font-size: 18px;
  font-weight: 400;
}

#chat-view {
  overflow-y: auto;
  display: flex;
  flex: 1;
  flex-direction: column;
}

.chat-box {
  display: flex;
  flex-direction: column;
  margin-bottom: 0.25rem;
}

.chat-box.pending {
  opacity: 50%;
}

.chat-box.send {
  align-items: flex-end;
}

.chat-box.receive {
  display: flex;
  align-items: flex-start;
}

.chat-text {
  display: flex;
  width: 100%;
}

.send .chat-text {
  flex-direction: row-reverse;
}

.receive .chat-text {
  flex-direction: row;
}

.receive .chat-unread {
  display: none;
}

.send .chat-unread {
  background: var(--sub-point-color);
  border-radius: 50%;
  height: 0.5em;
  width: 0.5em;
  margin-top: auto;
  margin-right: 0.25em;
}

.ss-single-selected>.placeholder {
  background: none;
}

#team-option::after {
  content: "▼";
}

.chat-text-body {
  max-width: 80%;
  padding: 0.5rem;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
  border-radius: 10px;

  /*padding-bottom: 10px;*/
  /*  width:440px;*/
  overflow: hidden;
  white-space: normal;
  display: inline-block;
  word-break: normal;
  overflow-wrap: break-word;
}

.send .chat-text-body {
  background-color: var(--chat-send-color);
}

.receive .chat-text-body {
  background-color: var(--chat-receive-color);
}

.chat-date {
  font-weight: 500;
  font-size: 12px;
  color: var(--main-icon-color);
}

#chat-input-form {
  display: flex;
}

#chat-input {
  flex: 2;
  margin-right: 0.25rem;
  background: #FFFFFF;
  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
  padding: 0.5em;
  border-radius: 0.5rem;
  border: none;
}

#chat-input:focus {
  outline: 0.0625rem solid var(--sub-point-color);
}

#chat-input:disabled {
  background-color: var(--main-bg-color);
}


#chat-submit {
  border: 0;
  border-radius: 10%;
  background-color: var(--sub-point-color);
  color: #FFFFFF;
}

.text-flex {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

footer {
  height: 80px;
  width: 100%;
  bottom: 0;
  left: 0;
  position: absolute;
  border-top: solid 2px black;
  font-family: "Zen Maru Gothic", sans-serif;
  text-align: center;
  display: grid;
  grid-row: 1fr 1fr 1fr;
  grid-column: 1fr 1fr;
  grid-column-gap: 50px;
  grid-row-gap: 10px;
}

.footer-item-col1 {
  grid-column: 1/2;
}

.footer-item-col2 {
  grid-column: 2/3;
}

.footer-item-row1 {
  grid-row: 1/2;
  font-weight: bold;
}

.footer-item-row1 {
  grid-row: 2/3;
}

.form-floating-group input {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.bg-tag-tool {
  color: #000000 !important;
  background-color: var(--tag-bg-tool) !important;
  font-weight: 700 !important;
}

.bg-tag-domain {
  color: #000000 !important;
  background-color: var(--tag-bg-domain) !important;
  font-weight: 700 !important;
}

.bg-tag-language {
  color: #000000 !important;
  background-color: var(--tag-bg-language) !important;
  font-weight: 700 !important;
}

.bg-tag-etc {
  color: #000000 !important;
  background-color: var(--tag-bg-ect) !important;
  font-weight: 700 !important;
}

.bg-none {
  background: none;
}

.bg-gray {
  background: #CDCDCD;
}


/*.carousel-item{*/
/*  background:white;*/
/*}*/

/*.carousel-inner .carousel-item.active,*/
/*.carousel-inner .carousel-item-next,*/
/*.carousel-inner .carousel-item-prev {*/
/*  display: flex;*/
/*}*/

/* medium and up screens */
/* @media (min-width: 768px) { */

/*  .carousel-inner .carousel-item-end.active,*/
/*  .carousel-inner .carousel-item-next {*/
/*    !*transform: translateX(25%);*!*/
/*  }*/

/*  .carousel-inner .carousel-item-start.active,*/
/*  .carousel-inner .carousel-item-prev {*/
/*    !*transform: translateX(-25%);*!*/
/*  }*/
/*}*/

/*.carousel-inner .carousel-item-end,*/
/*.carousel-inner .carousel-item-start {*/
/*  transform: translateX(0);*/
/*}*/

.default-cursor {
  cursor: default;
}

.pointer {
  cursor: pointer;
}

.opacity-hover:hover {
  opacity: 60%;
}

.noti-dropdown::after,
.msg-dropdown::after {
  content: none;
}

.no-icon-dropdown::after {
  display: none !important;
}

.default-btn {
  border: none;
  background: none;
}

#ApplyTeamModal .modal-body {
  padding: 0;
}

#ApplyTeamModal .nav {
  border-bottom: 1px solid var(---main-border-color);
}

#ApplyTeamModal .nav-item,
#ApplyTeamModal .nav-link {
  border-radius: 0;
}

#ApplyTeamModal .nav-pills .nav-link,
#ApplyTeamModal .nav-pills>.nav-link {
  color: #000000;
  border-top-color: transparent;
  border-bottom-color: #000000;
  border-radius: 0px
}

#ApplyTeamModal .nav-pills .nav-link.active,
#ApplyTeamModal .nav-pills .show>.nav-link {
  background-color: var(--main-bg-color);
  color: var(--sub-point-color);
  border-color: #000000;
  border-bottom-color: transparent;
  border-radius: 10px 10px 0px 0px;
}

#apply-recv-tab{
  border-right: 0.5px solid transparent;
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

#apply-send-tab{
  border-left: 0.5px solid transparent;
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.team-apply-item {
  padding: 0.75rem;
  border-bottom: 1px solid var(--main-border-color);
}

.team-apply-item:first-child {
  border-top: 1px solid var(--main-border-color);
}

.team-apply-meta {
  display: flex;
  gap: 0.5rem;
}

.team-apply-teamname {
  flex: 1 1 1;
  margin: auto;
}

.team-apply-user {
  flex: 1 1 1;
  margin: auto;
  text-decoration: underline;
  cursor: pointer;
}

.team-apply-action {
  flex: 1 1 0;
  display: flex;
  flex-direction: row;
  justify-content: end;
  gap: 0.5rem;
}

.team-apply-detail {
  display: flex;
}

.team-apply-detail-body {
  text-align: center;
}

.btn-default {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  border-radius: 0.625rem;
  border: 1px solid #000000;
}

.btn-default:hover {
  background-color: var(--btn-default-color);
}

.btn-refuse {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  font-size: 1rem;
  border: 1px solid var(--main-icon-color);
  border-radius: 0.625rem;
  background-color: transparent;
}

.btn-refuse:hover {
  background-color: var(--main-icon-color-transparent);
}

.btn-refuse:disabled {
  color: #000000;
  background-color: var(--main-icon-color-transparent);
}

.btn-accept {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  font-size: 1rem;
  border: 1px solid var(--sub-point-color);
  border-radius: 0.625rem;
  background-color: transparent;
}

.btn-accept:hover {
  background-color: var(--sub-point-color-transparent);
}

.btn-accept:disabled {
  color: #000000;
  background-color: var(--sub-point-color-transparent);
}

.btn-wait {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  font-size: 1rem;
  border: 1px solid var(--sub-point-color);
  border-radius: 0.625rem;
  background-color: transparent;
}

.btn-wait:disabled {
  color: #000000;
  background-color: var(--sub-point-color-transparent);
}

.writer-dropdown-btn {
  border: none;
  color: var(--sub-point-color);
  background: none;
}

.gap-1 {
  gap: 0.25rem;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-3 {
  gap: 0.75rem;
}

.gap-4 {
  gap: 1rem;
}

.gap-5 {
  gap: 1.25rem;
}

.gap-6 {
  gap: 1.5rem;
}

.gap-7 {
  gap: 1.75rem;
}

.gap-8 {
  gap: 2rem;
}
.weak-text{
  color: var(--main-icon-color);
  font-size: 12px;
}

